--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,3 +10,57 @@
 
     /*font-family: 'Playfair Display', sans-serif;*/
 }
+
+
+/*navbar css*/
+
+.navbar{
+    font-family:  'Poppins', sans-serif;
+    font-size: 17px;
+    line-height: 26px;
+    text-transform: uppercase;
+    box-shadow: 0 8px 6px -6px gray;
+    border-bottom: 0.3px ;
+    
+}
+
+.nav-link{
+    font-weight: 300 !important;
+}
+
+.active{
+    border-bottom: solid 2px;
+}
+
+
+.navbar-brand{
+    font-weight: 700;
+    font-family: 'roboto',sans-serif;
+}
+
+.links{
+    align-items: center;
+    flex-direction: row;
+}
+
+.footer{
+    color: white;
+    margin:10px ;
+    padding: 25px;
+}
+
+.footer a{
+    color: white;
+    text-decoration: none;
+   border-right:2px solid brown;
+    padding: 10px;
+}
+
+.footer a:hover{
+    color: #ffefba;
+}
+
+
+.diver{
+    margin: 100px;
+}
