--- a/client/src/index.css
+++ b/client/src/index.css
@@ -24,6 +24,13 @@
     
 }
 
+.total{
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 
 .register{
     display: flex;
@@ -31,4 +38,11 @@
     justify-content: center;
     flex-direction: column;
     margin-top: 50px;
+    background-color: antiquewhite;
+    width: 40%;
+}
+
+.register input{
+    margin-top:25px;
+    margin-bottom: 25px;
 }
